# pydecima

./: .gitignore  LICENSE  README.md  pyproject.toml
pydecima/: __init__.py  _utils.py  reader.py
pydecima/enums/: DecimaVersion.py  EAudioLanguages.py  EPixelFormat.py  ESentenceGroupType.py  ETextLanguages.py  ETextureSetType.py  EWaveDataEncoding.py  EWaveDataEncodingQuality.py  __init__.py
pydecima/resources/: AmmoResource.py  CharacterDescriptionComponentResource.py  CollisionTrigger.py  CreditsColumn.py  CreditsRow.py  DamageAreaResource.py  DataSourceCreditsResource.py  EntityProjectileAmmoResource.py  EntityResource.py  ExplosionResource.py  FacialAnimationComponentResource.py  FactCollisionTrigger.py  FocusScannedInfo.py  FocusTargetComponentResource.py  HumanoidBodyVariant.py  HumanoidBodyVariantGroup.py  InventoryActionAbilityResource.py  InventoryAmmoEjectorResource.py  InventoryEntityResource.py  InventoryItemComponentResource.py  InventoryLootPackageComponentResource.py  LocalizedAnimationResource.py  LocalizedSimpleSoundResource.py  LocalizedTextResource.py  LootData.py  LootItem.py  LootSlot.py  MusicResource.py  ObjectCollection.py  OutOfBoundsNavMeshArea.py  PhysicsCollisionResource.py  PrefetchList.py  Resource.py  SentenceGroupResource.py  SentenceResource.py  SkeletonAnimationResource.py  SpawnSetup.py  SpawnSetupGroup.py  Texture.py  TextureSet.py  (+8 more)
pydecima/resources/structs/: HashedString.py  ImageStruct.py  Ref.py
pydecima/type_maps/: __init__.py  dspc_type_map.py  pc_type_map.py  ps4_type_map.py  type_map.py
